--- a/src/index.html
+++ b/src/index.html
@@ -3,44 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta
       name="description"
       content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum, atque."
     />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-
+    <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
     <title>Тест</title>
 </head>
-  <body>
-    <div class="root">
-      <section >
-        <div >
-          <h1 >Заголовок H1</h1>
+  <body class="bg-dark">
+    <div class=" root container ">
+      <section class="line line d-md-flex align-items-center">
+        <div class="col block col-lg">
+          <h1 class="m-auto text-dark">Заголовок H1</h1>
         </div>
       </section>
 
-      <section >
-        <div >
+      <section class="line d-md-flex align-items-center" >
+        <div class="col block bg-danger col-lg">
         </div>
-        <div >
+        <div class="col block col-lg" style="border: dashed 1px black;">
         </div>
-        <div >
+        <div class="col block bg-warning col-lg">
         </div>
       </section>
 
-      <section>
-        <div >
-          <button type="button" class="btn btn-warning">Кнопка 1</button>
+      <section class="line line d-md-flex align-items-center" >
+        <div class="col block col-lg">
+          <button type="button" class="btn btn-warning m-auto">Кнопка 1</button>
         </div>
-        <div >
-          <button type="button" class="btn btn-success">Кнопка 2</button>
+        <div class="col block col-lg" style="flex: 2;">
+          <button type="button" class="btn btn-success m-auto">Кнопка 2</button>
         </div>
       </section>
+
+
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
-    <script src="./script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
   </body>
 </html>
